Fix: creacion modelo, controller y doc swagger de usuario admin dato
